force-app/main/default/objects/SPEN_Feedback__c/SPEN_Feedback__c.object-meta.xml
<CustomObject>
    <description>Test object created for Feedback POC</description>
    <label>Feedback</label>
    <nameField>
        <displayFormat>FB-{000000}</displayFormat>
        <label>Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedbacks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>