force-app/main/default/objects/SPEN_Feedback__c/fields/SPEN_AgreedActions__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AgreedActions__c</fullName>
    <label>Agreed actions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>