force-app/main/default/objects/SPEN_Feedback__c/fields/SPEN_CaseReference__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CaseReference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Reference</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Feedbacks</relationshipLabel>
    <relationshipName>Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>