force-app/main/default/objects/SPEN_Feedback__c/fields/SPEN_CommentsFromDesigner__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CommentsFromDesigner__c</fullName>
    <label>Comments from Recipient</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>