force-app/main/default/objects/SPEN_Feedback__c/fields/SPEN_CommentsFromManager__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CommentsFromManager__c</fullName>
    <label>Comments from manager</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>