force-app/main/default/objects/SPEN_Feedback__c/fields/SPEN_DesignerName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DesignerName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>