force-app/main/default/objects/SPEN_Feedback__c/fields/SPEN_DueDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DueDate__c</fullName>
    <label>Due date</label>
    <type>Date</type>
</CustomField>