force-app/main/default/objects/SPEN_Feedback__c/fields/SPEN_RAGStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RAGStatus__c</fullName>
    <formula>IF(SPEN_DueDate__c - TODAY()&gt;=3,IMAGE(&quot;/resource/GreenRAG&quot;, &quot;Green&quot;, 30, 40) ,
IF(SPEN_DueDate__c - TODAY()&gt;=2,IMAGE(&quot;/resource/AmberRAG&quot;, &quot;Amber&quot;, 30, 40),
IF(SPEN_DueDate__c - TODAY()&gt;= 1,IMAGE(&quot;/resource/RedRAG&quot;, &quot;Red&quot;, 30, 40),
IF(SPEN_DueDate__c - TODAY()&lt;= 0,IMAGE(&quot;/resource/RedRAG&quot;, &quot;Red&quot;, 30, 40),
NULL))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RAG status</label>
    <type>Text</type>
</CustomField>