force-app/main/default/objects/SPEN_Feedback__c/fields/SPEN_StarRating__c.field-meta.xml
<CustomField>
    <fullName>SPEN_StarRating__c</fullName>
    <formula>IF(TEXT(SPEN_Rating__c)=&quot;5&quot;,IMAGE(&quot;/img/samples/stars_500.gif&quot;, &quot;5 Stars&quot;),
 

IF(TEXT(SPEN_Rating__c)=&quot;4&quot;,IMAGE(&quot;/img/samples/stars_400.gif&quot;, &quot;4 Stars&quot;),
 

IF(TEXT(SPEN_Rating__c)=&quot;3&quot;,IMAGE(&quot;/img/samples/stars_300.gif&quot;, &quot;3 Stars&quot;),
 

IF(TEXT(SPEN_Rating__c)=&quot;2&quot;,IMAGE(&quot;/img/samples/stars_200.gif&quot;, &quot;2 Stars&quot;),
 

IF(TEXT(SPEN_Rating__c)=&quot;1&quot;,IMAGE(&quot;/img/samples/stars_100.gif&quot;, &quot;1 Star&quot;),
 

IMAGE(&quot;/img/samples/stars_000.gif&quot;, &quot;0 Stars&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Star Rating</label>
    <type>Text</type>
</CustomField>