force-app/main/default/objects/SPEN_Feedback__c/fields/SPEN_Type__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Coaching</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>